# laila

./: .gitignore  README.md  assistant_manager.py  index.html  main.py  pyproject.toml  requirements.txt  vercel.json  vercel_build.sh
static/: webflow-chat.html  webflow-integration-guide.md
