[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[project]
name = "laila-self-api"
version = "0.1.0"
description = "Laila Self API"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "python-dotenv==1.0.0",
    "openai>=1.12.0",
    "python-multipart==0.0.6",
    "httpx==0.25.1",
    "aiohttp==3.8.6",
    "starlette==0.27.0"
] 